<resources>
    <string name="app_name">HealthcocoPad</string>
    <string name="app_version_name">1.0.0.0</string>
    <string name="app_version_about_us_name">v%s(Beta)</string>
    <string name="database_name">healthcoco_pad.db</string>
    <string name="join">Join</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Get Started</string>
    <string name="title_hcc_twenty_four_seven">Day or Night \n your clinic is always open</string>
    <string name="text_hcc_twenty_four_seven">Too many patients waiting for their turn- Find your clinic always open 24x7</string>
    <string name="title_hcc_conn">Connect.Access.Share</string>
    <string name="text_hcc_conn">View entire patient medical data and history, with patient\'s consent</string>
    <string name="title_hcc_records">Anywhere. Anytime. Across Devices.</string>
    <string name="text_hcc_records">Safely store all patients records and access them anytime, from anywhere, and on multiple devices</string>
    <string name="title_hcc_profile">Build your Profile &amp; Reach out to the Healthcare Community</string>
    <string name="text_hcc_profile">Improve your online presence by creating a public profile and managing your clinic profile</string>
    <string name="title_hcc_sync">Everything is in sync</string>
    <string name="text_hcc_sync">Whatever you do on one device is reflected everywhere, you can always pick up wherever you left off. </string>
    <string name="title_hcc_prescription">Go Paperless with Digital Rx</string>
    <string name="text_hcc_rx">Top class Rx templates readily available to prescribe your patients in no time</string>
    <string name="forgot_your_password">Forgot Your Password&#160;?</string>
    <string name="to_reset_password">To reset password, Please enter Email associated with your account.</string>
    <string name="already_have_an_account">Already have an Account&#160;?&#160;Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_accept_terms_and_conditions">By Signing in, you agree to HealthcocoPad\'s &#160;</string>
    <string name="underlined_terms_of_service"><u>Terms of Service</u></string>
    <string name="and">&#160;and&#160;</string>
    <string name="underlined_privacy_policy"><u>Privacy Policy</u></string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_dr">Dr.</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="email_address">Email Address</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="speciality">Speciality</string>
    <string name="user_offline">User is Offline</string>
    <string name="title_update_available">Update Available</string>
    <string name="message_update_available">A new version of Healthcoco+ is available. Please update.</string>
    <string name="message_force_update">In Order to Continue, you must update Healthcoco+ now. This should only take a few moments.</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="please_enter_email_id_And_password_to_login">Please Enter Email ID and Password to Login</string>
    <string name="please_enter_email_id_to_login">Please Enter Email ID to Login</string>
    <string name="please_enter_password_to_login">Please Enter Password to Login</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="password_minimum_eight_characters">Password should be of Minimum 8 Characters</string>
    <string name="please_confirm_password">Please Confirm Password</string>
    <string name="please_enter_email_address">Please enter Email Address</string>
    <string name="please_enter_valid_email_address">Please enter a valid Email Address</string>
    <string name="please_enter_valid_clinic_no">Please enter valid Clinic Number</string>
    <string name="please_enter_valid_alternate_clinic_no">Please enter valid Alternate Clinic Number</string>
    <string name="please_enter_valid_website_url">Please enter a valid Website URL</string>
    <string name="userstate_verified">User Verified</string>
    <string name="userstate_not_verified">Pending Email Verification</string>
    <string name="userstate_not_activated">Pending Healthcoco Verification</string>
    <string name="userstate_incomplete">Pending Signup</string>
    <string name="userstate_complete_active">Active</string>
    <string name="verification">Verification</string>
    <string name="title_please_verify">Please Verify</string>
    <string name="alert_verify">Verification email has been sent to your registered email address.\nPlease check your Inbox/Spam folder.</string>
    <string name="title_activation">Activation</string>
    <string name="alert_activation">Your Activation is under process.\nWe will contact you shortly to get you started with Healthcoco+.</string>
    <string name="message_thank_you">Thank You for Contacting us.Our Team will contact you shortly.</string>
    <string name="thank_you">Thank You</string>
    <string name="loading_taking_time">Please wait&#8230;</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="email_sent_to">Email sent to&#160;</string>
    <string name="reset">Reset</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="page_no_loaded">Something went wrong while loading Page</string>
    <string name="enter_birthdate">Enter Birthdate</string>
    <string name="passwords_dont_match">Password does not match the Confirm Password.</string>
    <string name="please_enter_clinic_name">Please enter Clinic Name</string>
    <string name="please_enter_speciality">Please enter Speciality</string>
    <string name="please_select_speciality">Please select Speciality</string>
    <string name="please_select_city">Please select City</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="please_enter_city">Please enter City</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="please_enter_registration_number">Please enter Registration Number</string>
    <string name="please_select_role">Please select Role</string>
    <string name="please_enter_name">Please enter Name</string>
    <string name="please_select_gender">Please select Gender</string>
    <string name="please_enter_full_name">Please enter Full Name</string>
    <string name="please_enter_valid_mobile_no">Please enter valid Mobile Number</string>
    <string name="please_enter_valid_alternate_mobile_no">Please enter valid Alternate Mobile Number</string>
    <string name="please_enter_mobile_no">Please enter Mobile Number</string>
    <string name="search_city">Search City</string>
    <string name="search_speciality">Search Speciality</string>
    <string name="no_result_found_for_your_search">No result found for your Search</string>
    <string name="search_patient">Search Patient</string>
    <string name="error_local_data">Something went wrong while getting data from local</string>
    <string name="syncing_doctor_profile">Syncing Doctor Profile&#8230;</string>
    <string name="syncing_clinic_profile">Syncing Clinic Profile&#8230;</string>
    <string name="syncing_groups">Syncing Groups&#8230;</string>
    <string name="syncing_drug_dosage">Syncing Drug Dosage&#8230;</string>
    <string name="syncing_duration_unit">Syncing Duration Unit&#8230;</string>
    <string name="syncing_direction">Syncing Direction&#8230;</string>
    <string name="syncing_drug_type">Syncing Drug Type&#8230;</string>
    <string name="syncing_cities">Syncing Cities&#8230;</string>
    <string name="syncing_specialities">Syncing Specialities&#8230;</string>
    <string name="syncing_profession">Syncing Profession&#8230;</string>
    <string name="syncing_reffered_by">Syncing Referred By&#8230;</string>
    <string name="syncing_blood_groups">Syncing Bloud Groups&#8230;</string>
    <string name="syncing_contacts">Syncing Contacts&#8230;</string>
    <string name="syncing_education_qualification">Syncing Education Qualification&#8230;</string>
    <string name="syncing_institutes">Syncing Institutes&#8230;</string>
    <string name="syncing_present_complaint_suggestions">Syncing Present Complaint Suggestions&#8230;</string>
    <string name="syncing_history_of_present_complaint_suggestions">Syncing History Of Present Complaint Suggestions&#8230;</string>
    <string name="syncing_menstrual_history_suggestions">Syncing Menstrual History Suggestions&#8230;</string>
    <string name="syncing_obstetric_history_suggestions">Syncing Obstetric History Suggestions&#8230;</string>
    <string name="syncing_general_examination_suggestions">Syncing General Examination Suggestions&#8230;</string>
    <string name="syncing_systemic_examination_suggestions">Syncing Systemic Examination Suggestions&#8230;</string>
    <string name="syncing_provisional_diagnosis_suggestions">Syncing Provisional Diagnosis Suggestions&#8230;</string>
    <string name="syncing_ecg_details_suggestions">Syncing Ecg Details Suggestions&#8230;</string>
    <string name="syncing_ecg_suggestions">Syncing Ecg Suggestions&#8230;</string>
    <string name="syncing_echo_suggestions">Syncing Echo Suggestions&#8230;</string>
    <string name="syncing_xray_details_suggestions">Syncing Xray Details Suggestions&#8230;</string>
    <string name="syncing_xray_suggestions">Syncing Xray Suggestions&#8230;</string>
    <string name="syncing_holter_suggestions">Syncing Holter Suggestions&#8230;</string>
    <string name="confirm">Confirm</string>
    <string name="pending_confirmation">Pending Confirmation</string>
    <string name="all">All</string>
    <string name="cancelled">Cancelled</string>
    <string name="reschedule">Reschedule</string>
    <string name="confirmed">Confirmed</string>
    <string name="no_text_dash">&#8211;</string>
    <string name="alert_global_record_access">Please Generate OTP to get access to Global Records of&#160;</string>
    <string name="click_generate_otp_to_send_otp">Click "Generate OTP" to send OTP to Patient\'s registered Mobile Number.</string>
    <string name="otp_sent_to">One Time Password has been sent to&#160;</string>
    <string name="please_enter_same_to_verify">Please enter same to verify.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="regenerate_otp">Regenerate OTP?</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="print">Print</string>
    <string name="sms">SMS</string>
    <string name="clinic_numbers">Clinic Numbers</string>
    <string name="website">Website</string>
    <string name="clinic_email_address">Clinic Email Address</string>
    <string name="appointment">Appointment</string>
    <string name="edit_to_assign_personal_history">Edit to assign Personal History</string>
    <string name="diet">Diet</string>
    <string name="addictions">Addictions</string>
    <string name="bowel_habits">Bowel Habits</string>
    <string name="bladder_habits">Bladder Habits</string>
    <string name="discard">Discard</string>
    <string name="save_as_template">Save as Template</string>
    <string name="event">Event</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="allergy">Allergy</string>
    <string name="drugs">Drugs</string>
    <string name="edit">Edit</string>
</resources>