<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clinic_numbers"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />

    <TextView
        android:id="@+id/tv_clinic_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/no_text_dash"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />

    <TextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/no_text_dash"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clinic_email_address"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />

    <TextView
        android:id="@+id/tv_clinic_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/no_text_dash"
        android:textSize="@dimen/text_size_doctor_profile_item_header_child" />
</LinearLayout>