<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="0dp"
        android:text="@string/signin_accept_terms_and_conditions"
        android:textAllCaps="false"
        android:textColor="@color/grey_dark_text"
        android:textSize="@dimen/text_size_terms_and_privacy_policy" />

    <TextView
        android:id="@+id/tv_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/underlined_terms_of_service"
        android:textAllCaps="false"
        android:textColor="@drawable/text_selector_grey_blue"
        android:textSize="@dimen/text_size_terms_and_privacy_policy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/and"
        android:textAllCaps="false"
        android:textColor="@color/grey_dark_text"
        android:textSize="@dimen/text_size_terms_and_privacy_policy" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:maxLines="1"
        android:minHeight="0dp"
        android:text="@string/underlined_privacy_policy"
        android:textAllCaps="false"
        android:textColor="@drawable/text_selector_grey_blue"
        android:textSize="@dimen/text_size_terms_and_privacy_policy" />
</LinearLayout>
