<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title_cross"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_sent_to"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_dialog_fragment_20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_enter_same_to_verify"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_dialog_fragment_20sp" />

        <EditText
            android:id="@+id/edit_otp_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_line_grey_blue_solid_white_selector"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="@dimen/text_size_edit_otp_number" />

        <Button
            android:id="@+id/bt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_blue_border_solid_white_selector"
            android:text="@string/verify"
            android:textColor="@drawable/text_blue_selector" />

        <Button
            android:id="@+id/bt_regenerate_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="10dp"
            android:text="@string/regenerate_otp"
            android:textAllCaps="false"
            android:textColor="@drawable/text_blue_normal_grey_light_selected"
            android:textSize="@dimen/text_size_edit_otp_number" />
    </LinearLayout>
</LinearLayout>